Fix auto start check